reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_rename_all_on_variant-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEnumRenameAllOnVariant"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEnumRenameAllOnVariant"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestEnumRenameAllOnVariant": {
        "oneOf": [
          {
            "type": "object",
            "title": "Variant1",
            "required": [
              "Variant1"
            ],
            "properties": {
              "Variant1": {
                "type": "object",
                "title": "Variant1",
                "required": [
                  "fieldName"
                ],
                "properties": {
                  "fieldName": {
                    "$ref": "#/components/schemas/u8"
                  }
                }
              }
            }
          },
          {
            "type": "object",
            "title": "Variant2",
            "required": [
              "Variant2"
            ],
            "properties": {
              "Variant2": {
                "$ref": "#/components/schemas/u8"
              }
            }
          }
        ]
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
