reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_tag-4.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "reflectapi :: codegen :: openapi :: Spec :: from(& schema)"
---
{
  "openapi": "3.2.0",
  "info": {
    "title": "",
    "description": "",
    "version": "1.0.0"
  },
  "paths": {
    "/inout_test": {
      "description": "",
      "post": {
        "operationId": "inout_test",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEnumTag"
              }
            }
          },
          "required": true
        },
        "responses": {
          "200": {
            "description": "200 OK",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/reflectapi_demo.tests.serde.TestEnumTag"
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "reflectapi_demo.tests.serde.TestEnumTag": {
        "oneOf": [
          {
            "type": "object",
            "title": "Variant1",
            "required": [
              "field_name",
              "type"
            ],
            "properties": {
              "field_name": {
                "$ref": "#/components/schemas/u8"
              },
              "type": {
                "const": "Variant1"
              }
            }
          },
          {
            "type": "object",
            "title": "Variant2",
            "required": [
              "field_name",
              "type"
            ],
            "properties": {
              "field_name": {
                "$ref": "#/components/schemas/u8"
              },
              "type": {
                "const": "Variant2"
              }
            }
          }
        ]
      },
      "u8": {
        "description": "8-bit unsigned integer",
        "type": "integer"
      }
    }
  }
}
