reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_field_skip-5.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: "super :: into_python_code :: < TestEnumWithFieldSkip > ()"
---
"""
Generated Python client for api_client.

DO NOT MODIFY THIS FILE MANUALLY.
This file is automatically generated by ReflectAPI.
"""

from __future__ import annotations


# Standard library imports
from enum import Enum
from typing import Annotated, Any, Generic, Optional, TypeVar, Union

# Third-party imports
from pydantic import (
    BaseModel,
    ConfigDict,
    Field,
    RootModel,
    model_serializer,
    model_validator,
)

# Runtime imports
from reflectapi_runtime import AsyncClientBase, ClientBase, ApiResponse
from reflectapi_runtime import ReflectapiEmpty
from reflectapi_runtime import ReflectapiInfallible


# Helper functions for externally tagged enum serialization/deserialization
def _parse_externally_tagged(data, variants: dict, types: tuple, enum_name: str):
    """Parse an externally tagged enum from {key: value} format."""
    if types and isinstance(data, types):
        return data
    if isinstance(data, str) and data in variants:
        handler = variants[data]
        if handler == "_unit":
            return data
    if isinstance(data, dict):
        if len(data) != 1:
            raise ValueError("Externally tagged enum must have exactly one key")
        key, value = next(iter(data.items()))
        if key in variants:
            handler = variants[key]
            if handler == "_unit":
                return key
            return handler(value)
    raise ValueError(f"Unknown variant for {enum_name}: {data}")


def _serialize_externally_tagged(root, serializers: dict, enum_name: str):
    """Serialize an externally tagged enum to {key: value} format."""
    for variant_name, (check, serialize) in serializers.items():
        if check(root):
            return serialize(root)
    raise ValueError(f"Cannot serialize {enum_name} variant: {type(root)}")


class ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariant1Variant(BaseModel):
    """Variant1 variant"""

    model_config = ConfigDict(extra="ignore", populate_by_name=True)


# Externally tagged enum using RootModel
ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariants = (
    ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariant1Variant
)


class ReflectapiDemoTestsSerdeTestEnumWithFieldSkip(
    RootModel[ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariants]
):
    """Externally tagged enum"""

    @model_validator(mode="before")
    @classmethod
    def _validate(cls, data):
        return _parse_externally_tagged(
            data,
            {
                "Variant1": lambda v: (
                    ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariant1Variant(**v)
                )
            },
            (ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariant1Variant,),
            "ReflectapiDemoTestsSerdeTestEnumWithFieldSkip",
        )

    @model_serializer
    def _serialize(self):
        return _serialize_externally_tagged(
            self.root,
            {
                "Variant1": (
                    lambda r: isinstance(
                        r, ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariant1Variant
                    ),
                    lambda r: {"Variant1": r.model_dump(by_alias=True)},
                )
            },
            "ReflectapiDemoTestsSerdeTestEnumWithFieldSkip",
        )


# Namespace classes for dotted access to types
class reflectapi_demo:
    """Namespace for reflectapi_demo types."""

    class tests:
        """Namespace for tests types."""

        class serde:
            """Namespace for serde types."""

            TestEnumWithFieldSkipVariant1Variant = (
                ReflectapiDemoTestsSerdeTestEnumWithFieldSkipVariant1Variant
            )
            TestEnumWithFieldSkip = ReflectapiDemoTestsSerdeTestEnumWithFieldSkip


class AsyncInoutClient:
    """Async client for inout operations."""

    def __init__(self, client: AsyncClientBase) -> None:
        self._client = client

    async def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.TestEnumWithFieldSkip] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.TestEnumWithFieldSkip]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestEnumWithFieldSkip]: Response containing reflectapi_demo.tests.serde.TestEnumWithFieldSkip data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return await self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestEnumWithFieldSkip,
        )


class AsyncClient(AsyncClientBase):
    """Async client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = AsyncInoutClient(self)


class InoutClient:
    """Synchronous client for inout operations."""

    def __init__(self, client: ClientBase) -> None:
        self._client = client

    def test(
        self,
        data: Optional[reflectapi_demo.tests.serde.TestEnumWithFieldSkip] = None,
    ) -> ApiResponse[reflectapi_demo.tests.serde.TestEnumWithFieldSkip]:
        """

        Args:
            data: Request data for the test operation.

        Returns:
            ApiResponse[reflectapi_demo.tests.serde.TestEnumWithFieldSkip]: Response containing reflectapi_demo.tests.serde.TestEnumWithFieldSkip data
        """
        path = "/inout_test"

        params: dict[str, Any] = {}
        return self._client._make_request(
            path,
            params=params if params else None,
            json_model=data,
            response_model=reflectapi_demo.tests.serde.TestEnumWithFieldSkip,
        )


class Client(ClientBase):
    """Synchronous client for the API."""

    def __init__(
        self,
        base_url: str,
        **kwargs: Any,
    ) -> None:
        super().__init__(base_url, **kwargs)

        self.inout = InoutClient(self)


# External type definitions
StdNumNonZeroU32 = Annotated[int, "Rust NonZero u32 type"]
StdNumNonZeroU64 = Annotated[int, "Rust NonZero u64 type"]
StdNumNonZeroI32 = Annotated[int, "Rust NonZero i32 type"]
StdNumNonZeroI64 = Annotated[int, "Rust NonZero i64 type"]

# Rebuild models to resolve forward references
for _model in [
    ReflectapiDemoTestsSerdeTestEnumWithFieldSkip,
]:
    try:
        _model.model_rebuild()
    except Exception:
        pass
