reflectapi-demo/src/tests/snapshots/reflectapi_demo__tests__serde__enum_with_rename_to_invalid_chars.snap
---
source: reflectapi-demo/src/tests/serde.rs
expression: schema
---
{
  "name": "",
  "functions": [
    {
      "name": "inout_test",
      "path": "",
      "input_type": {
        "name": "reflectapi_demo::tests::serde::TestEnumWithRenameToInvalidChars"
      },
      "output_kind": "complete",
      "output_type": {
        "name": "reflectapi_demo::tests::serde::TestEnumWithRenameToInvalidChars"
      },
      "serialization": [
        "json",
        "msgpack"
      ]
    }
  ],
  "input_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Empty",
        "description": "Struct object with no fields",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestEnumWithRenameToInvalidChars",
        "serde_name": "enum-name&&",
        "variants": [
          {
            "name": "Variant1",
            "serde_name": "variant-name&&",
            "fields": {
              "named": [
                {
                  "name": "f",
                  "serde_name": "field-name&&",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  },
  "output_types": {
    "types": [
      {
        "kind": "struct",
        "name": "reflectapi::Infallible",
        "description": "Error object which is expected to be never returned",
        "fields": "none"
      },
      {
        "kind": "enum",
        "name": "reflectapi_demo::tests::serde::TestEnumWithRenameToInvalidChars",
        "serde_name": "enum-name&&",
        "variants": [
          {
            "name": "Variant1",
            "serde_name": "variant-name&&",
            "fields": {
              "named": [
                {
                  "name": "f",
                  "serde_name": "field-name&&",
                  "type": {
                    "name": "u8"
                  },
                  "required": true
                }
              ]
            }
          }
        ]
      },
      {
        "kind": "primitive",
        "name": "u8",
        "description": "8-bit unsigned integer"
      }
    ]
  }
}
